--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
         <p><img src="https://lh5.googleusercontent.com/p/AF1QipPmJb_7d5bspUms4-aSPsoee1L3GEMq4t5pb9Sx=w408-h306-k-no" width="350"><br/>A Cidade Proibida foi o palácio imperial da China desde meados da Dinastia Ming até ao fim da Dinastia Qing. Fica localizada no centro da antiga cidade de Pequim, acolhendo atualmente o "Palácio Museu".</p>
     </section>
      <section id='Amigo1'>
-        <p class="timepoint">Dica do Amigo Vinni - Setembro 2010</p>
-        <h3>Famigerado Mestre do Suco</h3>
-        <p><img src="https://exploreniteroi.files.wordpress.com/2015/08/img_2942.jpg" width="350"/><br/>Mostra a carteirinha que tu ganha aquele desconto marotão</p>
+        <p class="timepoint">Dica do Thales - Setembro 2016</p>
+        <h3>MIT</h3>
+        <p><img src="https://lh3.googleusercontent.com/proxy/kPmwVUjgOr0HkwDfM_uOmH9eienQS7o2Ao8khbrFARQs63jMrymEEk9eIEciDZOdf581SJWQ8sJr1f8agqdS8tspJKMKsJ6GUPju_FwUW4TdtJZ0y0UVHIurXMCC9EB49NWP6G3NhFC-JUj3LIBsSMVg3DP0CO4=w408-h270-k-no" width="350"/><br/>Mostra a carteirinha que tu ganha aquele desconto marotão</p>
     </section>
     <section id='Amigo2'>
         <p class="timepoint">Dica do Marilson - Em uma época remota</p>
@@ -58,7 +58,7 @@ var chapters = {
         pitch: 54.00
     },
     'Amigo1': { //Amigo 1
-        center: [-43.1065268, -22.8987912],
+        center: [-71.096121, 42.359598],
         bearing: 1.60,
         zoom: 18.89,
         speed: 0.6,
