--- a/index.html
+++ b/index.html
@@ -23,13 +23,13 @@
      <section id='Amigo1'>
         <p class="timepoint">Dica do Thales - Setembro 2016</p>
         <h3>MIT</h3>
-        <p><img src="https://lh3.googleusercontent.com/proxy/kPmwVUjgOr0HkwDfM_uOmH9eienQS7o2Ao8khbrFARQs63jMrymEEk9eIEciDZOdf581SJWQ8sJr1f8agqdS8tspJKMKsJ6GUPju_FwUW4TdtJZ0y0UVHIurXMCC9EB49NWP6G3NhFC-JUj3LIBsSMVg3DP0CO4=w408-h270-k-no" width="350"/><br/>Mostra a carteirinha que tu ganha aquele desconto marotão</p>
+        <p><img src="https://lh3.googleusercontent.com/proxy/kPmwVUjgOr0HkwDfM_uOmH9eienQS7o2Ao8khbrFARQs63jMrymEEk9eIEciDZOdf581SJWQ8sJr1f8agqdS8tspJKMKsJ6GUPju_FwUW4TdtJZ0y0UVHIurXMCC9EB49NWP6G3NhFC-JUj3LIBsSMVg3DP0CO4=w408-h270-k-no" width="350"/><br/>Maior Faculdade de Tecnologia do mundo!</p>
     </section>
     <section id='Amigo2'>
-        <p class="timepoint">Dica do Marilson - Em uma época remota</p>
-        <h3>Cais de Paraty</h3>
-        <p><img src="res/c1-escuna-turismo-paraty.jpg" width="350" /><br/><p style="font-size:xx-small;">Veja mais: <a href="http://paratyvip.com.br/cais-de-turismo-de-paraty">visitmalbork.pl</a></p>
-        <br/>Cais de Paraty!!!.</p>
+        <p class="timepoint">Dica do Renato</p>
+        <h3>Times Square</h3>
+        <p><img src="https://lh6.googleusercontent.com/proxy/Znsxo3Whwix1G5fg20KefpJjBaZ3tKYHMN9JfCrX-u3Vn4vbyGhqMq6UeKls35hli5m3Z8aPbbqg2NppiYU_4OngT4fgfKyoQoZ_7B0CZ4XZmjMsc48rYUiWqOMXN5Ed8SctP9mQpX14oK8Cl_5vHUxG9nlJTw=w408-h272-k-no" width="350" /><br/><p style="font-size:xx-small;"></p>
+        <br/>Local mais famoso do mundo! Realmente incrivel!</p>
     </section>
 </div>
 <script>
@@ -60,14 +60,14 @@ var chapters = {
     'Amigo1': { //Amigo 1
         center: [-71.096121, 42.359598],
         bearing: 1.60,
-        zoom: 18.89,
+        zoom: 13,
         speed: 0.6,
         pitch: 59.00
     },
     'Amigo2': { //Amigo 2
         bearing: 1.00,
-        center: [-44.709642, -23.221166],
-        zoom: 18,
+        center: [-73.984674, 40.759537],
+        zoom: 13,
         speed: 0.6,
         pitch: 60
     },
